--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,9 @@
     <swagger-ui.version>4.9.1</swagger-ui.version>
     <jersey.version>2.39.1</jersey.version>
     <jetty.version>9.4.56.v20240826</jetty.version>
-    <jakarta.servlet-api.version>4.0.4</jakarta.servlet-api.version>
+    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+    <!-- 6.0.0 requires JDK 11 -->
+    <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
     <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
     <jakarta.ws.rs-api.version>2.1.6</jakarta.ws.rs-api.version>
     <!-- openapi-generator dependencies -->
@@ -652,6 +654,12 @@
 
       <!-- RESTful service dependencies -->
       <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${javax.servlet-api.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>jakarta.servlet</groupId>
         <artifactId>jakarta.servlet-api</artifactId>
         <version>${jakarta.servlet-api.version}</version>
@@ -743,6 +751,10 @@
           <exclusion>
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
