--- a/charts/celeborn/templates/serviceaccount.yaml
+++ b/charts/celeborn/templates/serviceaccount.yaml
@@ -19,7 +19,8 @@ limitations under the License.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "celeborn.serviceAccountName" . }}
+  name: {{ include "celeborn.serviceAccount.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "celeborn.labels" . | nindent 4 }}
 {{- end }}
