--- a/charts/celeborn/templates/worker/service.yaml
+++ b/charts/celeborn/templates/worker/service.yaml
@@ -19,6 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "celeborn.worker.service.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "celeborn.worker.labels" . | nindent 4 }}
   annotations:
