--- a/charts/celeborn/tests/serviceaccount_test.yaml
+++ b/charts/celeborn/tests/serviceaccount_test.yaml
@@ -22,6 +22,7 @@ templates:
 
 release:
   name: celeborn
+  namespace: celeborn
 
 tests:
   - it: Should not create service account if `serviceAccount.create` is false
@@ -40,4 +41,17 @@ tests:
       - containsDocument:
           apiVersion: v1
           kind: ServiceAccount
-          name: default
+          name: celeborn
+          namespace: celeborn
+
+  - it: Should create service account with the specified name if `serviceAccount.name` is specified
+    set:
+      serviceAccount:
+        create: true
+        name: test-service-account
+    asserts:
+      - containsDocument:
+          apiVersion: v1
+          kind: ServiceAccount
+          name: test-service-account
+          namespace: celeborn
