--- a/charts/celeborn/templates/master/service.yaml
+++ b/charts/celeborn/templates/master/service.yaml
@@ -22,6 +22,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "celeborn.master.service.name" $ }}-{{ $i }}
+  namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "celeborn.labels" $ | nindent 4 }}
   annotations:
@@ -50,6 +51,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "celeborn.master.service.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "celeborn.master.labels" . | nindent 4 }}
   annotations:
