--- a/charts/celeborn/templates/rolebinding.yaml
+++ b/charts/celeborn/templates/rolebinding.yaml
@@ -19,15 +19,16 @@ limitations under the License.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "celeborn.roleBindingName" . }}
+  name: {{ include "celeborn.roleBinding.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "celeborn.labels" . | nindent 4 }}
 subjects:
-  - kind: ServiceAccount
-    name: {{ include "celeborn.serviceAccountName" . }}
+- kind: ServiceAccount
+  name: {{ include "celeborn.serviceAccount.name" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "celeborn.roleName" . }}
+  name: {{ include "celeborn.role.name" . }}
 {{- end }}
 
