--- a/charts/celeborn/templates/worker/priorityclass.yaml
+++ b/charts/celeborn/templates/worker/priorityclass.yaml
@@ -20,6 +20,7 @@ apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
 metadata:
   name: {{ include "celeborn.worker.priorityClass.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "celeborn.worker.labels" . | nindent 4 }}
 value: {{ .Values.worker.priorityClass.value }}
