--- a/charts/celeborn/tests/worker/service_test.yaml
+++ b/charts/celeborn/tests/worker/service_test.yaml
@@ -22,6 +22,7 @@ templates:
 
 release:
   name: celeborn
+  namespace: celeborn
 
 tests:
   - it: Should create worker service
@@ -30,6 +31,7 @@ tests:
           apiVersion: v1
           kind: Service
           name: celeborn-worker-svc
+          namespace: celeborn
 
   - it: Should have label selectors for worker
     asserts:
