--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -119,3 +119,23 @@ jobs:
       - name: Maven Check dependency list
         run: |
           ./dev/dependencies.sh --module ${{ matrix.module }} --check
+
+  maven-jdk17:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        module:
+          - 'spark-4.0'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 17
+          cache: maven
+          check-latest: false
+      - name: Maven Check dependency list
+        run: |
+          ./dev/dependencies.sh --module ${{ matrix.module }} --check
